Minecraft X-Ray 3.0.1 (2011.04.24)

  * Fix torch rendering for non-default texture packs, under some
    circumstances.
  * Fix a potential Exception for people running mods like More
    Block IDs

Minecraft X-Ray 3.0.0 (2011.04.21)

  * Render the appropriate sapling sprite 100% of the time
  * Show a purple box for unknown blocks, rather than empty space
  * Fixed the disappearing Render Details window when toggling between
    Nether and back
  * Handle invalid level.dat files more gracefully
  * Render mushrooms, flowers, and sugarcane as a "cross," more like
    it's done in Minecraft itself
  * Switched Stone Pressure Plate and Stone Button textures to use
    the actually-correct one
  * Make the minimap slightly more useful in the Nether
  * Handle an exception when the "saves" directory doesn't exist
  * Show exceptions in a GUI window rather than on the console
  * Added web blocks, on the offchance that they'll be permanent
  * Switched to launch4j to build the Windows EXE, which will let
    64-bit Windows users use it.

Minecraft X-Ray 2.7 Maintenance Branch 12 (2011.04.19)

  * Minor improvements to OSX and Linux script launchers
  * Added support for powered and detector rails
  * Added support for birch and spruce saplings
  * Glass and mob spawners render a bit better

Minecraft X-Ray 2.7 Maintenance Branch 11 (2011.03.16)

  * Fix to be not so picky about colorizing grass
  * Fix which prevents a crash while in Explored Highlighting mode
  * Fix Sapling rendering (also a crash)
  * Override texture data for X-Ray will be read from the
    .minecraft_xray/textures directory now

Minecraft X-Ray 2.7 Maintenance Branch 10 (2011.03.15)

  * Added Invert Mouse option to startup dialog
  * Some changes to compile versus Java 1.5 instead of 1.6, for PPC OSX
    users
  * Added a dialog to jump directly to a position, with a default key of J
  * Enter/Esc will do what you'd expect on the startup dialog